--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
   </head>
   <body>
-    <script src="index.js" type="module" defer></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
