--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" src="style.css">
     <meta charset="utf-8" />
-    <title>Cubin' along</title>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-    </style>
+
   </head>
   <body>
+    <script src="/node_modules/p5/lib/p5.js"></script>
+    <script src="/node_modules/p5.play/planck.min.js"></script>
+    <script src="/node_modules/p5/lib/addons/p5.sound.js"></script>
+    <script src="/node_modules/p5.play/p5.play.js"></script>
     <script src="index.js" type="module" defer></script>
   </body>
 </html>
