--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <script src="/node_modules/p5.play/planck.min.js"></script>
     <script src="/node_modules/p5/lib/addons/p5.sound.js"></script>
     <script src="/node_modules/p5.play/p5.play.js"></script>
-    <script src="index.js" defer></script>
+    <script src="index.js" type="module" defer></script>
   </body>
 </html>
