--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 
   </head>
   <body>
-    <script src="/node_modules/p5/lib/p5.js"></script>
-    <script src="/node_modules/p5.play/planck.min.js"></script>
-    <script src="/node_modules/p5/lib/addons/p5.sound.js"></script>
-    <script src="/node_modules/p5.play/p5.play.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
+    <script src="https://unpkg.com/@free-side/audioworklet-polyfill/dist/audioworklet-polyfill.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/planck@latest/dist/planck.min.js"></script>
+    <script src="https://p5play.org/v3/p5play.js"></script>
     <script src="index.js" defer></script>
   </body>
 </html>
